# collateral_sdk

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: format.yml  lint.yml  test.yml
examples/: deposit.ipynb  readonly.ipynb
src/collateral_sdk/: __init__.py  collateral.py  errors.py  utils.py
src/collateral_sdk/abi/: Collateral.abi.json  CollateralContributor.abi.json
tests/: test_collateral.py
